# qna-helper

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prompt.json  pyproject.toml  setup.cfg
qna_helper/: answerer.py  cli.py  parser.py
qna_helper/scripts/: qna_helper.py
tests/: conftest.py  test_qna_helper.py
tests/cassettes/: test_get_answers_and_write.yaml
