[project]
name = "qna-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alive-progress>=3.2.0",
    "openai>=1.53.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.6",
]

[project.scripts]
qna-helper="qna_helper.scripts.qna_helper:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
